tests/ui/traits/const-traits/call-generic-method-nonconst.stderr
error[E0277]: the trait bound `S: const Foo` is not satisfied
  --> $DIR/call-generic-method-nonconst.rs:23:34
   |
LL | pub const EQ: bool = equals_self(&S);
   |                      ----------- ^^
   |                      |
   |                      required by a bound introduced by this call
   |
note: required by a bound in `equals_self`
  --> $DIR/call-generic-method-nonconst.rs:16:25
   |
LL | const fn equals_self<T: [const] Foo>(t: &T) -> bool {
   |                         ^^^^^^^^^^^ required by this bound in `equals_self`
help: make the `impl` of trait `Foo` `const`
   |
LL | impl const Foo for S {
   |      +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
